# youtube-uploader

./: README.md  pyproject.toml
src/youtube_uploader/: __init__.py  cli.py  helpers.py  utils.py  youtube.py
tests/: test_helpers.py  test_utils.py
